# diffusion-self-correction

./: .gitignore  analyze_sweep.ipynb  pyproject.toml  sweep.yaml  sweep_arithmetic.sh  sweep_sudoku.sh  train_arithmetic.sh  train_backplay_arithmetic.sh  train_backplay_sudoku.sh  train_prism_arithmetic.sh  train_prism_sudoku.sh  train_remedi_arithmetic.sh  train_remedi_sudoku.sh  train_sudoku.sh  train_sudoku_snellius.sh
MDLM/: __init__.py  inspect_tokenization.py  run_inference.py  sudoku_experiment.py  train_backplay.py  train_mdlm.py  train_prism.py  train_remedi.py  utils.py
MDLM/configs/: backplay_arithmetic.toml  backplay_sudoku.toml  inference.toml  inference_arithmetic.toml  inference_sudoku.toml  prism.toml  prism_arithmetic.toml  prism_sudoku.toml  train_arithmetic.toml  train_backplay_arithmetic.toml  train_backplay_sudoku.toml  train_mdlm_arithmetic.toml  train_mdlm_sudoku.toml  train_prism_arithmetic.toml  train_prism_sudoku.toml  train_remedi_arithmetic.toml  train_remedi_sudoku.toml  train_sudoku.toml
MDLM/inference/: __init__.py  arithmetic_display.py  arithmetic_metrics.py  cli.py  model_loading.py  remasking_metrics.py  runner.py  sudoku_display.py  sudoku_metrics.py
MDLM/tasks/: __init__.py  arithmetic.py  base.py  sudoku.py
backbones/: __init__.py
backbones/llada/: __init__.py  config.py  model.py
data/: __init__.py
data/preprocessing/: __init__.py  arithmetic.py  sudoku.py  (+3 more)
diffusion/: __init__.py  interfaces.py  sampler.py  schedules.py  trainer.py  utils.py
sweep_results/: arithmetic_sweep.csv  arithmetic_sweep_examples.csv
(+22 files in other folders)
